[package]
name = "snake"
version = "0.1.0"
authors = ["Matthew Kousoulas <shaman.kous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "*"
specs = "*"
specs-derive = "*"
warmy = "*"
nalgebra = "*"
rand = "*"
